--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -66,5 +66,7 @@ const { title, description } = Astro.props;
 
 	body {
 		background-color: #161616;
+		overflow-x: hidden;
+		width: 100vw;
 	}
 </style>
