--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,42 +2,50 @@
 import IconGithub from "./icon-component/IconGithub.astro";
 import IconGmail from "./icon-component/IconGmail.astro";
 import IconLinkedin from "./icon-component/IconLinkedin.astro";
-
-
 ---
-<div class="flex flex-col bg-[#1D1D1D] px-40 py-8">
-    <nav class="flex flex-row-reverse justify-between">
-        <ul class="flex space-x-8 text-[#F6F6F6] items-center">
-            <li 
-                class="text-sm font-normal rounded-xl cursor-pointer"
-                tabindex="0"
-            >
-                Home
-            </li>
-            <li 
-                class="text-sm font-normal rounded-xl cursor-pointer"
-                tabindex="1"
-            >
-                About
-            </li>
-            <li 
-                class="text-sm font-normal rounded-xl cursor-pointer"
-                tabindex="2"
-            >
-                Blog
-            </li>
+
+<div class="flex flex-col bg-[#1D1D1D] px-4 md:px-16 lg:px-40 py-6 md:py-8">
+    <nav class="flex flex-col md:flex-row-reverse md:justify-between items-center">
+        <ul class="flex flex-wrap justify-center md:space-x-8 text-[#F6F6F6] items-center space-y-2 md:space-y-0">
+            {['Home', 'About', 'Blog', 'Projects'].map((item, index) => {
+                const link = item === 'Home' ? '/' : `/${item.toLowerCase()}`;
+                const isActive = Astro.url.pathname === link;
+                return (
+                    <li 
+                        class={`text-sm md:text-base font-normal px-3 py-2 rounded-xl cursor-pointer ${
+                            isActive ? 'bg-[#272727]' : ''
+                        }`}
+                        tabindex={index}
+                    >
+                        <a href={link}>{item}</a>
+                    </li>
+                );
+            })}
         </ul>
-        <img 
-            src="/assets/MMRI.svg"
-            alt="Blog Logo"
-        />
+        <a href="/" class="hidden lg:block">
+            <img 
+                src="/assets/MMRI.svg"
+                alt="Blog Logo"
+                class="w-12 h-12 lg:w-auto lg:h-auto"
+            />
+        </a>
     </nav>
 
-    <div class="flex justify-center space-x-3 py-8 border-b border-b-[#363636] mb-8">
+    <div class="flex justify-center space-x-3 md:space-x-6 py-6 md:py-8 border-b border-b-[#363636] mb-6 md:mb-8">
         <IconGmail class="hover:scale-110 transition duration-300 ease-in-out cursor-pointer"/>
         <IconGithub class="hover:scale-110 transition duration-300 ease-in-out cursor-pointer"/>
         <IconLinkedin class="hover:scale-110 transition duration-300 ease-in-out cursor-pointer"/>
     </div>
 
-    <p class="text-lg font-normal text-white self-center">@ Mohamad Rafi Irfansyah 2024</p>
+    <p class="text-sm md:text-base font-normal text-white text-center">
+        @ Mohamad Rafi Irfansyah 2024
+    </p>
 </div>
+
+<style>
+    @media (max-width: 768px) {
+        .blog-logo {
+            width: 100px;
+        }
+    }
+</style>
