--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -118,6 +118,7 @@ const { title, description, pubDate, updatedDate, tags, headings, duration } = A
     .blog-body {
         color: #83868A;
         padding-top: 2em;
+        text-align: justify;
     }
 </style>
 
