--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,10 +5,14 @@ import MainLayout from "@layouts/MainLayout.astro"
 import BlogCard from "@components/blog/BlogCard.astro"
 import ButtonBlogTags from "@components/blog/ButtonBlogTags"
 import { getCollection } from "astro:content"
+import { getAllPosts } from "@utils/db/posts"
+import { getLikesForPost } from "@utils/db/likes"
 
-const posts = (await getCollection('blog')).sort(
-    (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-)
+// const posts = (await getCollection('blog')).sort(
+//     (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+// )
+
+const posts = await getAllPosts()
 
 const tags = Array.from(
     new Set(
@@ -56,16 +60,18 @@ const tags = Array.from(
 
             {/* Blog grid with responsive columns */}
             <div class="mt-12 sm:mt-16 lg:mt-28 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-y-8 sm:gap-y-12 gap-x-3">
-                {posts.map((item) => (
-                    <BlogCard 
-                        title={item.data.title}
-                        description={item.data.description}
-                        imgUrl={item.data?.heroImage}
-                        tags={item.data.tags}
-                        href={`/blog/${item.slug}/`}
-                        duration={item.data.duration}
+                {posts.map((item) => {
+                  return (
+                    <BlogCard
+                      title={item.data.title}
+                      description={item.data.description}
+                      imgUrl={item.data?.heroImage}
+                      tags={item.data.tags}
+                      href={`/blog/${item.slug}/`}
+                      duration={item.data.duration}
                     />
-                ))}
+                  );
+                })}
             </div>
         </div>
     </div>
