--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -1,5 +1,4 @@
 ---
-import { CldImage } from 'astro-cloudinary'
 import { Icon } from 'astro-icon/components'
 import BlogTag from './BlogTag.astro'
 
@@ -12,7 +11,8 @@ interface Props {
     duration: string
 }
 
-const { title, description, imgUrl, tags, href, duration } = Astro.props
+const { title, description, tags, href, duration } = Astro.props
+const randomId = Math.floor(Math.random() * 1000)
 ---
 
 <div class="justify-self-center" data-post data-tags={JSON.stringify(tags)}>
@@ -20,12 +20,13 @@ const { title, description, imgUrl, tags, href, duration } = Astro.props
         <div 
             class="flex flex-col border border-[#242424] bg-[#1C1C1C] rounded-sm cursor-pointer max-w-[430px] max-h-[436px] w-full h-full"
         >
-            <CldImage 
-                src={imgUrl || "https://res.cloudinary.com/rafirfansyah/image/upload/v1731826909/React_Image_s6nsdn.png"}
+            <img 
+                src={`https://picsum.photos/seed/${randomId}/400/250`} 
                 width={430}
                 height={234}
                 alt="Blog Image"
                 class="image-style h-full"
+                loading="lazy"
             />
             <div
                 class="p-4 flex flex-col justify-start"
