--- a/src/components/blog/RecentBlogCard.astro
+++ b/src/components/blog/RecentBlogCard.astro
@@ -1,6 +1,4 @@
 ---
-import { CldImage } from "astro-cloudinary";
-
 interface Props {
     title: string
     description: string
@@ -9,18 +7,20 @@ interface Props {
 }
 
 const { title, description, imgUrl, href } = Astro.props
+const randomId = Math.floor(Math.random() * 1000)
 ---
 <div class="bg-gradient-to-t from-[#181818] to-[#2C2C2C] bg-clip-border p-[1.5px] shadow-inner rounded-lg w-full h-[310px]">
-    <div class="flex flex-col bg-[#282828] bg-opacity-70 rounded-lg h-full">
+    <div class="flex flex-col bg-[#282828] bg-opacity-70 rounded-lg">
         <a href={href}>
-            <CldImage 
-                src={imgUrl || ""}
+            <img
+                src={`https://picsum.photos/seed/${randomId}/400/250`}
                 alt="Blog Card"
                 width={430}
                 height={234}
                 class="rounded-t-lg "
+                loading="lazy"
             />
-            <div class="flex flex-col py-5 px-4 items-start text-start w-full h-full space-y-1">
+            <div class="flex flex-col py-5 px-4 items-start text-start w-full space-y-1">
                 <p class="text-sm font-semibold text-[#F6F6F6]">{title}</p>
                 <p class="text-sm font-normal text-[#858585]">{description}</p>
             </div>
