--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,7 +4,7 @@
 <nav id="navbar" class="sticky top-0 z-50 flex justify-center lg:justify-between items-center px-4 md:px-8 lg:px-20 py-4 md:py-6 border-b border-b-[#282828] bg-[#161616] transition-transform duration-300 ease-in-out">
     <!-- Navigation Links -->
     <ul class="flex space-x-4 md:space-x-6 text-white items-center">
-        {['Home', 'About', 'Blog', 'Projects'].map((item, index) => {
+        {['Home', 'About', 'Blog', 'Project'].map((item, index) => {
             const link = item === 'Home' ? '/' : `/${item.toLowerCase()}`;
             const isActive = Astro.url.pathname === link;
             return (
