--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -50,7 +50,7 @@ const { title, description, headings, pubDate, endProjectDate } = Astro.props;
                                         )}
                                     </div>
                                     <span class="px-7">
-                                        <p class="text-[#F6F6F6] font-light text-xs">Team of 6</p>
+                                        <p class="text-[#F6F6F6] font-light text-xs">Project Category</p>
                                     </span>
                                 </div>
                             </div>
